--- a/Tier1/Tier1/BlazorAppTier1/Pages/CreatePost/PostCreation.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/CreatePost/PostCreation.razor
@@ -5,6 +5,10 @@
 @using Entities.Models
 @using System.Text.Encodings.Web
 @using System.Security.Claims
+@using System.Net.Http.Headers
+@using System.Text.Json
+@using HttpServices
+@using Microsoft.AspNetCore.Components.Web.Infrastructure
 @inject IPostService _postService;
 @inject IUserService _UserService;
 
@@ -17,22 +21,28 @@
 <br/>
 <br/>
 
-@if (allCategories is null) {
+@if (allCategories is null)
+{
     <p> Loading.....</p>
 }
-else {
+else
+{
     <br/>
     <br/>
 
 
     <!-- <select class="form-select form-select-lg mb-3" id="category" aria-label=".form-select-lg example">
         <option selected>Choose category</option>
-        @foreach (var category in allCategories) {
-            @if (category.Subcategories == null || category.Subcategories.Count == 0) {
+        @foreach (var category in allCategories)
+        {
+            @if (category.Subcategories == null || category.Subcategories.Count == 0)
+            {
                 <option>@category.Name</option>
             }
-            else {
-                @foreach (var sub in category.Subcategories) {
+            else
+            {
+                @foreach (var sub in category.Subcategories)
+                {
                     <option>@sub.Name</option>
                 }
             }
@@ -40,7 +50,7 @@ else {
     </select> -->
 
 
-    <div class="container bootstrap snippets bootdeys">
+    <div class="container bootstrap snippets bootdeys body">
         <div class="row">
             <div class="col-md-12 col-sm-9">
                 <form class="form-horizontal">
@@ -57,7 +67,7 @@ else {
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" style="margin-left: 20%">
                         <div class="panel-heading">
                             <h4 class="panel-title"style="color:white">Post info</h4>
                         </div>
@@ -65,33 +75,26 @@ else {
                             <div class="form-group">
 
                                 <div class="col-sm-10">
-                                    <select class="form-select form-select-lg mb-3" @bind="test" name="category" aria-label=".form-select-lg example">
-                                        <option selected>Choose category</option>
-                                        @foreach (var category in allCategories) {
+                                    <select class="form-select form-select-lg mb-3" @bind="subCategory" name="category" aria-label=".form-select-lg example" style="max-width: 70%">
+                                        <option selected >Choose category</option>
+                                        @foreach (var category in allCategories)
+                                        {
                                             _subcategories.AddRange(category.Subcategories);
 
-                                            @foreach (var sub in category.Subcategories) {
+                                            @foreach (var sub in category.Subcategories)
+                                            {
                                                 <option>@sub.Name</option>
                                             }
                                         }
                                     </select>
                                 </div>
                             </div>
-                            <!--
-                            <div class="form-group">
-                                <div class="test">
-                                    <label class="col-sm-2 control-label" style="color:white" @bind="post.Description">Description</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-                            -->
+
 
                             <div class="form-group">
-                                <label id="name" class="col-sm-2 control-label" style="color:white" >Title</label>
+                                <label id="name" class="col-sm-2 control-label" style="color:white">Title</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" @bind="post.Title">
+                                    <input type="text" class="form-control" @bind="post.Title" required style="max-width: 70%">
                                 </div>
                             </div>
                             <br/>
@@ -100,20 +103,8 @@ else {
                                 <div class="col-md-7">
                                     <div class="well">
                                         <form accept-charset="UTF-8" action="" method="POST">
-                                            <textarea class="form-control" @bind="post.Description" id="text" name="text" placeholder="Description" rows="5"></textarea>
-                                            <br/>
-                                            <h6 class="pull-right" id="count_message" style="color:white"></h6>
-
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <br/>
-                            <div class="container">
-                                <div class="col-md-7">
-                                    <div class="well">
-                                        <form accept-charset="UTF-8" action="" method="POST">
-                                            <textarea class="form-control"  id="text" name="text" placeholder="place for images----later implementations" rows="5"></textarea>
+                                            <label> Description about you Service/Product</label>
+                                            <textarea class="form-control" @bind="post.Description" id="text" name="text" placeholder="Description" rows="5"  ></textarea>
                                             <br/>
                                             <h6 class="pull-right" id="count_message" style="color:white"></h6>
 
@@ -123,24 +114,35 @@ else {
                             </div>
                             <br/>
 
-                            <div class="form-group">
-
-                                <label class="col-sm-2 control-label" style="color:white" >Condition</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" @bind="post.Condition">
-                                </div>
-
-                            </div>
                             <br/>
+
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" style="color:white" >E-mail address</label>
-                                <div class="col-sm-10">
-                                    <input type="email" class="form-control" @bind="post.Email">
-                                </div>
+
+                                <label class="col-sm-2 control-label" style="color:white">Condition</label>
+                                @* <div class="col-sm-10"> *@
+                                @* <input type="text" class="form-control" @bind="post.Condition"> *@
+                                @* </div> *@
+
+                                <select class="form-select" @bind="post.Condition" name="category" aria-label=".form-select example" style="max-width: 58%">
+                                    <option selected>Choose Condition</option>
+                                    @foreach (var condition in conditions)
+                                    {
+                                        <option>@condition</option>
+                                                                               
+                                    }
+                                </select>
+                            </div>
+                            
+                        </div>
+                        <br/>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" style="color:white">E-mail address</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" @bind="post.Email" style="max-width: 70%">
                             </div>
                         </div>
-                    </div>
-
+                  
+                    
                     <div class="panel panel-default">
                         <br/>
 
@@ -148,23 +150,40 @@ else {
                         <div class="panel-body">
 
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" style="color:white" >Mobile number</label>
+                                <label class="col-sm-2 control-label" style="color:white">Mobile number</label>
                                 <div class="col-sm-10">
-                                    <input type="tel" class="form-control" @bind="post.PhoneNumber">
+                                    <input type="tel" class="form-control" @bind="post.PhoneNumber" style="max-width: 70%">
                                 </div>
                             </div>
+                              <div class="form-group" style="margin-top: 5px">
+                                                            <label class="col-sm-2 control-label" style="color:white">Address</label>
+                                                            <div class="col-sm-10">
+                                                                <input type="tel" class="form-control" @bind="post.Address" style="max-width: 70%;margin-top: 2px">
+                                                            </div>
+                                                        </div>
                             <br/>
 
+                            <div>
+                                <InputFile OnChange="@OnInputFileChange"> Upload Image </InputFile>
+                            </div>
 
                             <div class="form-group">
                                 <div class="col-sm-10 col-sm-offset-2">
-                                    <button type="submit" class="btn btn-primary" @onclick="CreatePost">Submit</button>
-                                   
+                                    <button type="button" class="btn btn-primary" onclick="@CreatePost" style="margin-top: 12px" >Submit</button>
+
                                 </div>
                             </div>
                         </div>
                     </div>
+                      </div>
                 </form>
+                <div style="color: red; margin: 10px;">
+                 @if (!string.IsNullOrEmpty(errorLabel)) {
+                                            <div class="errorPrompt">
+                                                <label> @errorLabel</label>
+                                            </div>
+                                        }
+                 </div>
             </div>
         </div>
     </div>
@@ -184,53 +203,120 @@ else {
     private List<Category>? allCategories = new List<Category>();
     private List<Subcategory> _subcategories = new List<Subcategory>();
 
+    private string subCategory;
+    public IBrowserFile? file;
 
-    protected async override Task OnInitializedAsync() {
-        try {
+    private string errorLabel = String.Empty;
+
+
+    private IList<string> conditions = new List<string>()
+    {
+        "New","Used","Rarely Used"
+    };
+    
+
+    
+    // At the start of program 
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
             allCategories = await _postService.GetALlCategoriesAsync();
             AuthenticationState authState = await AuthState;
             ClaimsPrincipal user = authState.User;
-            if (user.Identity.IsAuthenticated) {
+            if (user.Identity.IsAuthenticated)
+            {
     //get user clas base on the user identity
                 _user = await _UserService.GetUserAsync(user.Identity.Name);
             }
         }
-        catch (Exception e) {
+        catch (Exception e)
+        {
             Console.WriteLine(e.Message);
         }
     }
 
 
-    private async Task Foo() {
-    //   string strDDLValue = Request.Form["ddlVendor"].ToString();
+
+
+    private async Task OnInputFileChange(InputFileChangeEventArgs e)
+    {
+        file = e.File;
     }
 
-    private string test = String.Empty;
+    private async Task CreatePost()
+    {
+        try
+        {
+            int localId = 0;
+            foreach (var item in _subcategories)
+            {
+                if (item.Name.Equals(subCategory))
+                {
+                    localId = item.Id;
+                }
+            }
+
+            DateTime today = DateTime.Today;
+            post.DateCreated = new Date()
+            {
+                Day = today.Day,
+                Month = today.Month,
+                Year = today.Year
+            };
+            post.Images = new List<Image>();
+            post.Writer = _user;
+
+            if (post.Address == null)
+            {
+                post.Address = "Address not provided";
+            }
 
 
-    private async Task CreatePost() {
-        int localId = 0;
-        foreach (var item in _subcategories) {
-            if (item.Name.Equals(test)) {
-                localId = item.Id;
+
+    // Without image
+            if (file == null)
+            {
+                Post localTest = await _postService.AddPostAsync(localId, post);
+
+
+                Console.WriteLine(localTest.Description);
+            }
+
+    // adding image function
+            if (file != null)
+            {
+                var form = new MultipartFormDataContent();
+                using (var fs = file.OpenReadStream())
+                {
+                    using (var streamContent = new StreamContent(fs))
+                    {
+                        using (var fileContent = new ByteArrayContent(await streamContent.ReadAsByteArrayAsync()))
+                        {
+                            fileContent.Headers.ContentType = MediaTypeHeaderValue.Parse("multipart/form-data");
+
+                            form.Add(fileContent, "file", file.Name);
+
+                            Post localTest = await _postService.AddPostAsync(localId, post, form);
+                            Console.WriteLine(localTest.Description);
+                        }
+                    }
+                }
+            }
+            navMgr.NavigateTo("/");
+        }
+        catch (Exception e)
+        {
+            errorLabel = "One or more field are empty";
+            Console.WriteLine(e.Message);
+            if (file.Size > 512000)
+            {
+                errorLabel = "File size is greater than we support ";
             }
         }
 
-        DateTime today = DateTime.Today;
-        post.DateCreated = new Date() {
-            Day = today.Day,
-            Month = today.Month,
-            Year = today.Year                                                                           
-        };
-        if (post.Address ==null) {
-            post.Address = "Address not provided";
-        }
-        post.Images = new List<Image>();
-        post.Writer = _user;
-        Post localTest = await _postService.AddPostAsync(localId, post);
-        Console.WriteLine(localTest.Description);
-    }
 
-}
+
+    }
 
 }
