--- a/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
@@ -26,24 +26,15 @@
 								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 									<a class="nav-link" href="PostCreation" role="button">Add </a>
 								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link" href="#">Agency</a>
-								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="#">Action</a>
-										<a class="dropdown-item" href="#">Another action</a>
-										<a class="dropdown-item" href="#">Something else here</a>
-										<a class="dropdown-item" href="#">Another action</a>
-									</div>
-								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link" href="#">Journal</a>
-								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link" href="#">Contact</a>
-								</li>
+								<AuthorizeView>
+									<Authorized>
+										<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+											<a class="nav-link" href="PostBookmark" role="button">Bookmark list</a>
+										</li>
+									</Authorized>
+									<NotAuthorized>
+									</NotAuthorized>
+								</AuthorizeView>
 							</ul>
 						</div>
 						
