--- a/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Contracts
 @using Entities.Models
 @using BlazorAppTier1.Pages.UIElements
-@using Microsoft.AspNetCore.Mvc.RazorPages
+@using BlazorAppTier1.Pages.PostPage
 
 @inject IPostService _postService;
 @inject NavigationManager Navigation
@@ -66,59 +66,17 @@
             </div>
             <!--Right side-->
             <div class="col-lg-9">
-                <div class="row">
-
-                    @if (postToShow == null) {
-                        <p> Loading posts...</p>
-                    }
-                    else {
-@foreach (var post in postToShow) {
-    <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="candidate-list candidate-grid">
-            <div class="candidate-list-image">
-                <img class="img-fluid" src="@post.Images" alt="">
-            </div>
-            <div class="candidate-list-details">
-                <div class="candidate-list-info">
-                    <div class="candidate-list-title">
-                        <h5>
-                            <a href="#" @onclick="@(() => Navigation.NavigateTo("/PostDetails/" + post.Id))">@post.Title</a>
-                        </h5>
-                    </div>
-                    <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                            <li>
-                                <i class="fas fa-user pr-1"></i>@post.Writer.GetName()
-                            </li>
-                            <li>
-                                <i class="fas fa-map-marker-alt pr-1"></i>@post.Address
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="candidate-list-favourite-time">
-                    <a class="candidate-list-favourite order-2" href="#">
-                        <i class="far fa-heart"></i>
-                    </a>
-                    <span class="candidate-list-time order-1">
-                        <i class="far fa-clock pr-1"></i>@post.DateCreated.GetDate()
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-}
-                    }
-
-                </div>
+                
+                <PostList postToShow="@postToShow"></PostList>
+                
                 <div class="row">
                     <div class="col-12 text-center mt-4 mt-sm-5">
                         <ul class="pagination justify-content-center mb-0">
                             <li class="page-item @backElement">
-                                <a class="page-link" href="#" @onclick="@(() => Pagination(CurrentPage - 1))">Prev</a>
+                                <a class="page-link" @onclick="@(() => Pagination(CurrentPage - 1))">Prev</a>
                             </li>
                             <li class="page-item @nextElement">
-                                <a class="page-link" href="#" @onclick="@((() => Pagination(CurrentPage + 1)))">Next</a>
+                                <a class="page-link" @onclick="@((() => Pagination(CurrentPage + 1)))">Next</a>
                             </li>
                         </ul>
                     </div>
