--- a/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
@@ -67,7 +67,7 @@
             <!--Right side-->
             <div class="col-lg-9">
                 
-                <PostList postToShow="@postToShow" userBookedList="@false"></PostList>
+                <PostList postToShow="@postToShow"></PostList>
                 
                 <div class="row">
                     <div class="col-12 text-center mt-4 mt-sm-5">
