--- a/Tier1/Tier1/BlazorAppTier1/Pages/UIElements/Modal.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/UIElements/Modal.razor
@@ -1,7 +1,7 @@
-﻿@namespace BlazorAppTier1.Pages.UIElements
+﻿@namespace UIElements
 
 <div class="modal-background" style="display:block; height: 100%">
-    <div class="modal-box text-center">
+    <div class="modal-box">
     
         @ChildContent
     
